      to Rene Engelhard for the report.  (Closes: #856137)
    + [CL] Check for packages containing upstart configuration under
      /etc/init. Thanks to Paul Wise for the report.  (Closes: #825348)
  * checks/init.d.desc:
    + [CL] Add an example snippet to explain how to prevent emission
      of init.d-script-sourcing-without-test.
  * checks/menu-format.desc:
    + [ADB] Fix formatting of desktop-entry-lacks-icon-entry
  * checks/scripts.desc:
    + [CL] Upgrade new-package-should-not-package-python2-module from
      I: to W:. See #829744 for more info.
    + [CL] Clarify wording in new-package-should-not-package-python2-module
      to make the justification clearer.
    + [CL] Check for calls to dpkg-statoverride --add without a
      corresponding --list.  (Closes: #652963)
  * checks/rules.desc:
    + [CL] Clarify wording in debian-rules-parses-dpkg-parsechangelog to
      make the justification clearer.  (Closes: #865882)
    + [CL] Check for files setting DEB_BUILD_OPTIONS instead of
      DH_BUILD_MAINT_OPTIONS. (Closes: #833691)
  * checks/udev.{desc,pm}:
    + [NT] New check by Petter Reinholdtsen.
  * checks/watch-file.pm:
    + [CL] Factor out hard-coded list of possible upstream key locations
      to the "common/signing-key-filenames" Lintian::Data resource.

  * commands/lintian.pm:
    + [NT] Attempt to clean up on SIGTERM (like with SIGINT).
    + [CL] Allow the use of suppress-tags=<tag>[,<tag>[,<tag>]] in
      lintianrc. (Closes: #764486)
  * commands/reporting-html-reports:
    + [NT] Enable re-use of the memory for the maintainer mapping once the
      log file as been parsed.
    + [CL] Consistently use the same "Debian style" RFC 822 date format for
      both "Mirror timestamp" and "Last updated" on the index page.
      (Closes: #828720)
  * commands/reporting-sync-state:
    + [NT] Re-encode checksums into base64 encoded strings (from hex).
      This reduces size per checksum by about ~30% (disk and memory).  This